packages/typ/tests/fixtures/diagnostics/0984_mli_nested_path_zeroary_overapplied_06.mli.expected
File "0984_mli_nested_path_zeroary_overapplied_06.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0984_mli_nested_path_zeroary_overapplied_06 is not a valid module name.

File "0984_mli_nested_path_zeroary_overapplied_06.mli", line 7, characters 13-35:
7 | val x_zeta : int Outer_zeta.Inner.t
                 ^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_zeta.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
